--- a/main.css
+++ b/main.css
@@ -20,13 +20,14 @@ body {
   perspective: 1000px;
 }
 
-p {
-  height: 8vh;
+ p {
+  position: relative;
+  top: 30%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: -15px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 18px;
   color: #fff;
 }
 
