--- a/inicio.css
+++ b/inicio.css
@@ -12,7 +12,6 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    margin: 0;
     width: 100%;
 }
 
@@ -23,6 +22,7 @@ h1 {
 }
 
 button {
+    margin-top: 1.5vh;
     background-color: rgb(4, 73, 223);
     color: white;
     border: none;
