--- a/main.css
+++ b/main.css
@@ -20,16 +20,24 @@ body {
   perspective: 1000px;
 }
 
-p {
-  border: 1px solid red;
-  position: relative;
-  top: 30%;
+.text {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+p {
+  position: relative;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 25px;
   color: #fff;
+}
+
+.heart {
+  height: 70px;
+  width: 70px;
+  background: #f20044;
 }
 
 .night {
@@ -1332,7 +1340,7 @@ p {
           animation-play-state: paused !important;
 }
 
-@media (max-width: 600px) {
+@media (min-width: 600px) {
   p {
     top: 10%;
     font-size: 24px;
