--- a/main.css
+++ b/main.css
@@ -40,7 +40,21 @@ p {
   background: #f20044;
   position: relative;
   transform: rotate(-45deg);
-  margin-top: 20px;
+  margin-top: 40px;
+  box-shadow: -10px 10px 90px #f20044;
+  animation: heart .6s linear infinite;
+}
+
+@keyframes heart {
+  0% {
+    transform: rotate(-45deg) scale(1.3);
+  }
+  80% {
+    transform: rotate(-45deg) scale(1.2);
+  }
+  100% {
+    transform: rotate(-45deg) scale(1.3);
+  }
 }
 
 .heart::before {
@@ -51,6 +65,20 @@ p {
   background: #f20044;
   top: -50%;
   border-radius: 50px;
+  box-shadow: -10px -10px 90px #f20044;
+
+}
+
+.heart::after {
+  content: '';
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  background: #f20044;
+  right: -50%;
+  border-radius: 50px;
+  box-shadow: 10px 10px 90px #f20044;
+
 }
 
 .night {
@@ -1358,6 +1386,7 @@ p {
     position: relative;
     top: 30%;
   }
+
   p {
     font-size: 23px;
   }
